<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RHIT Mobile</string>
    <string name="search_hint">Search locations</string>
    <string name="people_search_hint">Search people</string>
    <string name="services_search_hint">Search services</string>
    <string name="tour_tags_search_hint">Search interests</string>
    <string name="no_results">No Results :\'(</string>
    <string name="no_results_more_tags">No Results :\'(\nTry selecting more tags</string>
    <string name="sample_text">Sample Text</string>
    <string name="on_campus_inside">On Campus (inside)</string>
    <string name="on_campus_outside">On Campus (outside)</string>
    <string name="off_campus">Off Campus</string>
    <string name="select_tour_type">Select Tour Type:</string>
    <string name="general">General</string>
    <string name="interest_based">Interest based</string>
    <string name="take_tour">Take Tour</string>
    <string name="where_are_you">Where are you?</string>
    <string name="tour_startup_message">Want to see campus before coming all the way out to see it in person?  At campus and need a quick overview of what Rose-Hulman has to offer?  Grab a quick tour here.  For more info, visit http://bit.ly/yMC495</string>
    <string name="direction_icon">Direction Icon</string>
    <string name="source_destination">Source/Destination</string>
    <string name="map">Map</string>
    <string name="directions">Directions</string>
    <string name="schedule">Schedule</string>
    <string name="links">Links</string>
    <string name="whats_inside">What\'s Inside</string>
    <string name="login_message">Have a Kerberos login? Sign in to access features exclusive to members of Rose-Hulman.</string>
    <string name="update_login_message">Password changed? Sign in again to access features exclusive to members of Rose-Hulman.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="view_list">View List</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    
    <string name="location_services_message">You need GPS network location services to be enabled to use this feature</string>
    <string name="location_services_title">Enable location services</string>
    <string name="do_it">Do it</string>
    <string name="cancel">Cancel</string>
    
    <!-- Choose Account Activity label -->
    <string name="choose_account_label">Select an account</string>

    <string name="add_account_label">"Add an account"</string>
    <string name="choose_account_text">"Which account would you like to use?"</string>

    <!-- Button label to add an account [CHAR LIMIT=20] -->
    <string name="add_account_button_label">Add account</string>

    <string-array name="schedule_days">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    
    <string-array name="hours_start">
        <item></item>
        <item>8:05am</item>
		<item>9:00am</item>
		<item>9:55am</item>
		<item>10:50am</item>
		<item>11:45am</item>
		<item>12:40pm</item>
		<item>1:35pm</item>
		<item>2:30pm</item>
		<item>3:25pm</item>
		<item>4:20pm</item>
    </string-array>
    
    <string-array name="hours_end">
        <item></item>
		<item>8:55am</item>
		<item>9:50am</item>
		<item>10:45am</item>
		<item>11:40am</item>
		<item>12:35pm</item>
		<item>1:30pm</item>
		<item>2:25pm</item>
		<item>3:20pm</item>
		<item>4:15pm</item>
		<item>5:10pm</item>
    </string-array>
    
    
		<string name="authentication_error">Unable to authenticate</string>
		<string name="error_json">Service responded improperly. Ensure the app is up to date and try again.</string>
		<string name="error_server">Service is rejecting requests. Please try again later.</string>
		<string name="no_gps_available">No GPS available</string>

</resources>