<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/tour_startup_message" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/where_are_you"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/groupLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <RadioButton
                android:id="@+id/rdoOnCampusInside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_campus_inside" />

            <RadioButton
                android:id="@+id/rdoOnCampusOutside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_campus_outside" />

            <RadioButton
                android:id="@+id/rdoOffCampus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off_campus" />
        </RadioGroup>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/select_tour_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/groupType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <RadioButton
                android:id="@+id/rdoGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/general" />

            <RadioButton
                android:id="@+id/rdoCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_based" />
        </RadioGroup>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <Button
            android:id="@+id/btnTour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="5dp"
            android:text="@string/take_tour" />
    </LinearLayout>

</ScrollView>