<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<com.google.android.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:apiKey="03v-vSSy4cBYVGPmnnCKs0Wwf9554R_IdexaPFg"
    />
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="10dp" >
	    
		<ImageView
		    android:id="@+id/btnZoomOut"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentRight="true"
		    android:adjustViewBounds="true"
		    android:clickable="true"
		    android:contentDescription="@string/zoom_out"
		    android:src="@drawable/btn_zoom_down" />
	
		<ImageView
		    android:id="@+id/btnZoomIn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_above="@+id/btnZoomOut"
		    android:layout_alignParentRight="true"
		    android:adjustViewBounds="true"
		    android:clickable="true"
		    android:contentDescription="@string/zoom_in"
		    android:src="@drawable/btn_zoom_up" />
	
		<ImageView
		    android:id="@+id/btnListDirections"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentLeft="true"
		    android:layout_marginRight="20dp"
		    android:adjustViewBounds="true"
		    android:clickable="true"
		    android:visibility="invisible"
		    android:contentDescription="@string/view_list"
		    android:src="@drawable/btn_list_directions" />
	
		<ImageView
		    android:id="@+id/btnPrev"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_toRightOf="@+id/btnListDirections"
		    android:adjustViewBounds="true"
		    android:clickable="true"
		    android:visibility="invisible"
		    android:contentDescription="@string/previous"
		    android:src="@drawable/btn_prev_down" />
	
		<ImageView
		    android:id="@+id/btnNext"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_toRightOf="@+id/btnPrev"
		    android:adjustViewBounds="true"
		    android:clickable="true"
		    android:visibility="invisible"
		    android:contentDescription="@string/next"
		    android:src="@drawable/btn_next_up" />
	</RelativeLayout>
</RelativeLayout>
